[gd_scene load_steps=9 format=3 uid="uid://nyi26curqqr1"]

[ext_resource type="Theme" uid="uid://dhstdcnd4x62y" path="res://Themes/dialog_node_theme.tres" id="1_cfc8n"]
[ext_resource type="Script" path="res://Option.gd" id="1_ojjra"]
[ext_resource type="FontFile" uid="uid://ngufbprst73q" path="res://Assets/Fonts/RobotoMono-VariableFont_wght.ttf" id="2_s3y22"]
[ext_resource type="Script" path="res://CodeEdit.gd" id="3_8tdp0"]
[ext_resource type="AudioStream" uid="uid://couq2lkkju6q6" path="res://Assets/Sound/Type2.wav" id="4_yc4y8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jb8gg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0v5b"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_86r6n"]
number_color = Color(0.368627, 0.815686, 0, 1)
symbol_color = Color(0.898039, 0.917647, 0.917647, 1)
function_color = Color(0.368627, 0.815686, 0, 1)
keyword_colors = {
"else if": Color(0.85098, 0.403922, 0.917647, 1),
"is behind us": Color(0.694118, 0.345098, 1, 1),
"no more what ifs": Color(0.85098, 0.403922, 0.917647, 1),
"or else": Color(0.85098, 0.403922, 0.917647, 1),
"scream": Color(0.694118, 0.345098, 1, 1)
}
color_regions = {
"<< >>": Color(0.141176, 0.698039, 0.584314, 1),
"| |": Color(0.729412, 0.392157, 1, 1)
}

[node name="Option" type="GraphNode" groups=["OPTION", "graph_nodes"]]
offset_right = 300.0
offset_bottom = 195.0
mouse_default_cursor_shape = 6
theme = ExtResource("1_cfc8n")
theme_override_constants/separation = 10
title = "NodeTitle"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_ojjra")
ignore_color = Color(0.498039, 0.498039, 0.498039, 1)
active_color = Color(0.929412, 0.603922, 0.494118, 1)

[node name="Text" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Text"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_jb8gg")
text = "Player Response"

[node name="TextEdit" type="CodeEdit" parent="Text"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0.898039, 0.917647, 0.917647, 1)
theme_override_colors/selection_color = Color(0, 0.713726, 1, 0.74902)
theme_override_fonts/font = ExtResource("2_s3y22")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0v5b")
placeholder_text = "Type your character responses here...
"
wrap_mode = 1
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_86r6n")
scroll_smooth = true
scroll_v_scroll_speed = 90.0
scroll_fit_content_height = true
caret_blink = true
line_folding = true
gutters_draw_line_numbers = true
indent_automatic_prefixes = Array[String]([":", "{", "[", "<", ">"])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"\"": "\"",
"'": "'",
"(": ")",
"<<": ">>",
"[": "]",
"{": "}"
}
script = ExtResource("3_8tdp0")

[node name="TypeSound" type="AudioStreamPlayer" parent="Text/TextEdit"]
stream = ExtResource("4_yc4y8")

[node name="DiceDropdown" type="OptionButton" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
item_count = 13
selected = 0
popup/item_0/text = "Dice Roll (Optional)"
popup/item_0/id = 0
popup/item_1/text = "Charm"
popup/item_1/id = 1
popup/item_2/text = "Intellect"
popup/item_2/id = 2
popup/item_3/text = "Subterfuge"
popup/item_3/id = 3
popup/item_4/text = "Will"
popup/item_4/id = 4
popup/item_5/text = "Seduce"
popup/item_5/id = 5
popup/item_6/text = "Bluff"
popup/item_6/id = 6
popup/item_7/text = "Observe"
popup/item_7/id = 7
popup/item_8/text = "Repair"
popup/item_8/id = 8
popup/item_9/text = "Sneak"
popup/item_9/id = 9
popup/item_10/text = "Streetwise"
popup/item_10/id = 10
popup/item_11/text = "Intimidate"
popup/item_11/id = 11
popup/item_12/text = "Inspire"
popup/item_12/id = 12

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "target_room: "

[node name="LeftSpacer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "(none)"

[node name="RightSpacer" type="Control" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="text_changed" from="Text/TextEdit" to="Text/TextEdit" method="_on_text_changed" flags=18]
[connection signal="item_selected" from="DiceDropdown" to="." method="_on_dice_dropdown_item_selected"]
